--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -3,18 +3,21 @@
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control select {
     display: block;
     width: 100%;
     margin-bottom: 0.25rem;
 }
 
-.form-control input {
+.form-control input,
+.form-control select {
     border: 1px solid #a1a1a1;
     font: inherit;
     border-radius: 2px;
 }
 
-.form-control input:focus {
+.form-control input:focus,
+.form-control select:focus {
     outline-color: #237ebb;
 }
