Adding Cookie to store login info

--- a/views/admin/edit-person.ejs
+++ b/views/admin/edit-person.ejs
@@ -40,7 +40,7 @@
             <% if (editing) { %>
                 <input type="hidden" name="personId" value="<%= person.id %>">
             <% } %>
-            <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Person<% } %></button>
+            <button class="btn" type="submit"><% if (editing) { %>Update Person<% } else { %>Add Person<% } %></button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
