--- a/views/people.ejs
+++ b/views/people.ejs
@@ -22,7 +22,7 @@
                     
                 </div>
                 <div class="card__actions">
-                    <a href="/people/<%= person.id %>" class="btn">Details</a>
+                    <a href="/people/<%= person._id %>" class="btn">Details</a>
                 </div>
             </article>
             <% } %>
