--- a/views/admin/people-list.ejs
+++ b/views/admin/people-list.ejs
@@ -18,13 +18,13 @@
                     
                 </div>
                 <div class="card__content">
-                    <h2 class="product__price"><%= person.vaccineName %></h2>
+                    <h2 class="product__price"><%= person.vaccine %></h2>
                     
                 </div>
                 <div class="card__actions">
-                    <a href="/admin/edit-person/<%= person.id %>?edit=true" class="btn">Edit</a>
+                    <a href="/admin/edit-person/<%= person._id %>?edit=true" class="btn">Edit</a>
                     <form action="/admin/delete-product" method="POST">
-                        <input type="hidden" name="personId" value="<%= person.id %>">
+                        <input type="hidden" name="personId" value="<%= person._id %>">
                         <button class="btn" type="submit">Delete</button>
                     </form>
                 </div>
