--- a/views/person-detail.ejs
+++ b/views/person-detail.ejs
@@ -3,15 +3,15 @@
 <body>
     <%- include('includes/navigation.ejs') %>
     <main class="centered">
-        <h1>Id : <%= person.id %></h1>
+        <h1>Id : <%= person._id %></h1>
         <h2>Name : <%= person.name %></h2>
         <hr>
         <p>Address : <%= person.address %></p>
         <p>Sector : <%= person.sector %></p>
         <p>Vaccine Name : <%= person.vaccine %></p>
         <p>Dose : <%= person.dose %></p>
-        <p>Date : <%= person.vaccineDate %></p>
-        <p>EC Number : <%= person.ecNo %></p>
+        <p>Date : <%= person.date %></p>
+        <p>EC Number : <%= person.ecn %></p>
 
     </main>
 <%- include('includes/end.ejs') %>
